--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "angular": "~1.3.1",
     "angular-route": "~1.3.1",
-    "ng-table": "~0.3.1",
+    "angular-ui-grid": "~3.0.0-rc.12",
     "angular-leaflet-directive": "~0.7.9",
     "bootstrap": "~3.2.0"
   }
